trying to fix spacing

--- a/styles1.css
+++ b/styles1.css
@@ -37,6 +37,7 @@ body {
     background-color: #6b9132;
     height: 28px;
     align-items: center;
+    align-items: center;
     padding-left: 0;
     margin-bottom: 0.3%;
     margin-top: 0;
